# HackMeridian

./: .gitignore  LICENSE  readme.md
backend/: .env.example  Cargo.toml  Dockerfile  app.py  debug.py  main.py  models.py  requirements.txt  stellar_service.py  user_service.py
backend/docs/: deploy_contract.md
backend/env/: pyvenv.cfg
backend/src/: main.rs
backend/static/js/: app.js
backend/templates/: driver.html  enterprise.html  index.html
backend2/: .env.example  Cargo.toml
backend2/src/: ideiaProject.md  main.rs  models.rs  routes.rs  soroban_client.rs
frontend/: app.js  index.html  indexPronto.html  index_old.html
stellar/logistics/: Cargo.toml
stellar/logistics/contracts/logistics/: Cargo.toml
stellar/logistics/contracts/logistics/src/: lib.rs
