[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = {version = "0.7", features = ["macros"]}
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.145"
tower-http = { version = "0.5", features = ["cors"] }
sha2 = "0.10.9"
hex = "0.4.3"
dotenvy = "0.15.7"
anyhow = "1.0"
reqwest = { version = "0.12", features = ["json"] }

soroban-sdk = {version = "23.0.1", features = ["testutils"]}
stellar-xdr = { version = "23.0.0", features = ["curr"] }
stellar-cli = { version = "23.0.0", package = "soroban-cli" }


base64 = "0.22.1"